--- a/06-gobarber-web/package.json
+++ b/06-gobarber-web/package.json
@@ -16,6 +16,8 @@
     "@unform/web": "^2.1.3",
     "axios": "^0.19.2",
     "date-fns": "^2.15.0",
+    "elliptic": "^6.5.3",
+    "lodash": "^4.17.20",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-day-picker": "^7.4.8",
@@ -24,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
+    "serialize-javascript": "^4.0.0",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "uuidv4": "^6.1.1",
